--- a/index.html
+++ b/index.html
@@ -163,7 +163,7 @@
   </head>
   <body>
     <div class="container">
-      <h1>Schulte Table Game</h1>
+      <h1>Schulte Table</h1>
       <p>Click numbers from 1 to 25 in ascending order</p>
       <button id="startButton">Start Game</button>
       <div id="countdown" class="hidden"></div>
