--- a/index.html
+++ b/index.html
@@ -200,6 +200,10 @@
       <button id="playAgainButton" class="hidden" class="goback">Play Again</button>
       <div class="footer">Created by <a href="https://www.linkedin.com/in/shahdhairya245/" target="_blank">@Dhairya Shah</a></div>
     </div>
+    <script>
+  window.va = window.va || function () { (window.vaq = window.vaq || []).push(arguments); };
+</script>
+<script defer src="/_vercel/insights/script.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/canvas-confetti@1.6.0/dist/confetti.browser.min.js"></script>
     <script>
       let timerInterval, countdownInterval;
